update description in dataset

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ Drones become popular recently and equip more sensors than traditional cameras, 
 		        			<li>Drone-view images:</li>
 		        			<ol>
 		        				<li>frame/all/[filename].jpg: all of images</li>
-		        				<li>frame/LocationA/test/[filename].jpg: images taken at Sun Yat-sen Memorial Hall</li>
-		        				<li>frame/LocationB/test/[filename].jpg: images taken at Chiang Kai-shek Memorial Hall</li>
-		        				<li>frame/LocationC/test/[filename].jpg: images taken at Daan Forest Park</li>
-		        				<li>frame/WeatherA/test/[filename].jpg: images taken under the same weather</li>
-		        				<li>frame/WeatherB/test/[filename].jpg: images taken under the same weather</li>
+		        				<li>frame/LocationA/test/[filename].jpg: images taken at Sun Yat-sen Memorial Hall.</li>
+		        				<li>frame/LocationB/test/[filename].jpg: images taken at Chiang Kai-shek Memorial Hall.</li>
+		        				<li>frame/LocationC/test/[filename].jpg: images taken at Daan Forest Park.</li>
+		        				<li>frame/WeatherA/test/[filename].jpg: images taken under the same weather A.</li>
+		        				<li>frame/WeatherB/test/[filename].jpg: images taken under the same weather B.</li>
 		        			</ol>
 		        			<li>location.txt: [filename] [latitude] [longitude] [compass] [height] P.S.: compass: NESW(0, 90, 180, -90)</li>
 		        			<li>Building proposals by Faster R-CNN for each image: faster_bb/[filename].txt</li>
@@ -83,7 +83,7 @@ Drones become popular recently and equip more sensors than traditional cameras, 
 		        				Collected drone-view images: 
 		        				<ol>
 		        				<li>Collected/img/[filename].jpg</li>
-		        				<li>Collected/annotation/[filename].txt: x1 y1 x2 y2 1</li>
+		        				<li>Collected/annotation/[filename].txt: [x1 y1 x2 y2 1]</li>
 		        				</ol>
 		        			</li>
 		        			<li>
