update the right format for bounding boxes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Drones become popular recently and equip more sensors than traditional cameras, 
 		        			<li>location.txt: [filename] [latitude] [longitude] [compass] [height] P.S.: compass: NESW(0, 90, 180, -90)</li>
 		        			<li>Bounding boxes for building proposals by Faster R-CNN on each image: faster_bb/[filename].txt</li>
 			        			<ul><li>
-			        				[x1 y1 x2 y2 score]
+			        				[x1] [y1] [x2] [y2] [score]
 			        				</li></ul>
 		        			<li>Building queries for each image by <a href="https://developers.google.com/places/">Google Places API</a>: poi/[filename].txt
 		        				<ul><li>
@@ -86,7 +86,7 @@ Drones become popular recently and equip more sensors than traditional cameras, 
 		        				Collected drone-view images: 
 		        				<ol>
 		        				<li>Collected/img/[filename].jpg</li>
-		        				<li>Collected/annotation/[filename].txt: [x1 y1 x2 y2 1]</li>
+		        				<li>Collected/annotation/[filename].txt: [x1] [y1] [x2] [y2] [1]</li>
 		        				</ol>
 		        			</li>
 		        			<li>
